samples/_failures_safe/1761417076_4adf03_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c0b1a66f.c: In function ‘main’:
./samples/SAFE/__tmp_c0b1a66f.c:158:5: error: expected expression at end of input
  158 |     process_logs(entries, entry_count, processors[choice -
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_c0b1a66f.c:158:5: error: expected declaration or statement at end of input
